--- a/mybatis-demo/null-field-mapped-null-object/pom.xml
+++ b/mybatis-demo/null-field-mapped-null-object/pom.xml
@@ -20,6 +20,10 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>log4j-api</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
